- Interface and implementation generation for static members.
- Generic methods support.