@@ -14,21 +14,21 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.1.1" PrivateAssets="All" />
+    <PackageReference Include="Microsoft.SourceLink.GitHub" Version="8.0.0" PrivateAssets="All" />
   </ItemGroup>
 
   <Target Name="FillProjectProperties" BeforeTargets="BeforeBuild;GenerateNuspec">
     <ReadLinesFromFile File="..\SolutionProperties\Authors.txt">
-      <Output TaskParameter="Lines" ItemName="AuthorsLines"/>
+      <Output TaskParameter="Lines" ItemName="AuthorsLines" />
     </ReadLinesFromFile>
     <ReadLinesFromFile File="..\SolutionProperties\Company.txt">
-      <Output TaskParameter="Lines" ItemName="CompanyLines"/>
+      <Output TaskParameter="Lines" ItemName="CompanyLines" />
     </ReadLinesFromFile>
     <ReadLinesFromFile File="..\SolutionProperties\Copyright.txt">
-      <Output TaskParameter="Lines" ItemName="CopyrightLines"/>
+      <Output TaskParameter="Lines" ItemName="CopyrightLines" />
     </ReadLinesFromFile>
     <ReadLinesFromFile File="..\SolutionProperties\Product.txt">
-      <Output TaskParameter="Lines" ItemName="ProductLines"/>
+      <Output TaskParameter="Lines" ItemName="ProductLines" />
     </ReadLinesFromFile>
     <PropertyGroup>
       <Authors>@(AuthorsLines)</Authors>
