@@ -1,2 +1,3 @@
-- Interface and implementation generation for static members.
-- Generic methods support.
+- Fixed problem with explicit interface specifier.
+- Excluded methods inherited from System.Object.
+- GeneratedCodeAttribute for the generated interface.
